Fix query parsing with quotes and whitespace in tags

--- a/frontend/src/__generated/index.css
+++ b/frontend/src/__generated/index.css
@@ -5924,6 +5924,7 @@ body {
   font-feature-settings: normal;
   position: relative;
   text-overflow: ellipsis;
+  white-space: pre;
 }
 ._10xh0c26 {
   border: var(--_1pyqka91o) solid 1px;
